--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
 					<div class="form_title">Создать чат</div>
 					<div class="form_group">
 						<div class="form_label">Название:</div>
-						<input type="text" class="input" />
+						<input type="text" class="input" data-input="title" />
 					</div>
 					<div class="form_group">
 						<div class="form_label">Пароль:</div>
-						<input type="password" class="input" />
+						<input type="password" class="input" data-input="password" />
 						<div class="subtitle subtitle-right subtitle_group">
 							Оставьте пустым если вход свободный
 						</div>
 					</div>
 					<div class="form_group">
 						<div class="form_label">Публичный:</div>
-						<input type="checkbox" class="input checkbox" />
+						<input type="checkbox" class="input checkbox" data-input="isPublic" checked />
 					</div>
-					<button class="action">Создать</button>
+					<button class="action" data-action="create">Создать</button>
 				</div>
 			</div>
 		</template>
